modules/gdscript/tests/scripts/analyzer/errors/override_static_function_with_non_static.gd
# GH-117912

class A:
	static func my_function() -> void:
		pass

class B extends A:
	func my_function() -> void:
		pass

func test():
	pass
